--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pydeck==0.8.1b0
 Pygments==2.17.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
+python-docx==1.1.0
 referencing==0.32.0
 requests==2.31.0
 rich==13.7.0
